# pack

./: .clang-format  CMakeLists.txt  README.md  pack-config.cmake.in  pack.project
pack/: attribute.h  convert.h  expected.h  flags.h  formatter.h  magic-enum.h  meta.h  options.h  pack.h  serialization.h  types.h  ustring.h  utils.h  visitor.h
pack/private/: ustring.inl
pack/types/: binary.h  enum.h  list.h  map.h  node.h  string.h  value.h  variant.h
pack/types/private/: binary.inl  enum.inl  list.inl  map.inl  string.inl  value.inl  variant.inl
protoc/: CMakeLists.txt
protoc/cmake/: protogen.cmake
protoc/src/: classgenerator.cpp  classgenerator.h  filegenerator.cpp  filegenerator.h  formatter.h  generator.cpp  generator.h  main.cpp  utils.h
src/: attribute.cpp  node.cpp  serialization.cpp  types.cpp  ustring.cpp  utils.cpp
src/providers/: json.cpp  protobuf.cpp  utils.cpp  utils.h  yaml.cpp
tests/: CMakeLists.txt  binary.cpp  child.cpp  convert.cpp  enums.cpp  expected.cpp  include.cpp  json.cpp  list.cpp  main.cpp  map.cpp  nested.cpp  node.cpp  oneof.cpp  options.cpp  protobuf.cpp  simple.cpp  string.cpp  types.cpp  ustring.cpp  value.cpp  variant.cpp
tests/examples/: example.proto
